优化系统：安全加固、UI统一化、代码质量提升
安全加固：
- BCrypt 密码加密（注册/登录/改密）
- JWT 配置注入（secret/expiry 从 application.yml 读取）
- 后端验证码接口（数学题，Session存储）
- 全局异常处理器补充 MethodArgumentNotValidException
- 数据库账号密码改为环境变量回退写法

UI统一化（CSS设计系统）：
- 新增 modern-theme.css，统一 CSS 变量（--primary, --border-color 等）
- Login/Register 玻璃卡片设计，消除所有硬编码颜色
- Admin/Front Layout 内联样式全部移入 CSS 类
- Admin 所有列表页统一 filter-header/filter-title 卡片头部
- Admin PasswordEdit/UserPerson 重写为现代卡片风格
- Front ToOrder/PasswordEdit/AppointRecordList 现代化改造
- App.vue .card 全局类改用 CSS 变量

代码质量：
- 修复 83 处 ESLint 错误（v-for :key、未使用变量等）
- 移除接口文件 @SneakyThrows 注解（不合法）
- 修复 AppointRecordServiceImpl.updateById(List) → updateBatchById
- 关键 ServiceImpl 方法加 @Transactional
- 日志 System.out → @Slf4j + log.error/info
- 前端响应拦截器 != → !==

功能补充：
- Wave 6 UI/UX：Admin Home/Front Home 加 v-loading 和 el-empty
- PaginationTable 空数据显示 el-empty
- ToOrder 提交按钮防重复点击

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>