@@ -1,6 +1,7 @@
 package com.studyroom.tools;
 
 import com.auth0.jwt.interfaces.DecodedJWT;
+import lombok.extern.slf4j.Slf4j;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -10,6 +11,7 @@ import java.util.List;
 /**
  * 扩展方法
  */
+@Slf4j
 public class Extension {
 
     /**
@@ -25,11 +27,12 @@ public class Extension {
     public static boolean isNullOrEmpty(String str) {
         return !isNotNullOrEmpty(str);
     }
+
     /**
      * 判断Id是否存在
      */
     public static boolean isNullOrZero(Integer value) {
-        return value==null||value==0;
+        return value == null || value == 0;
     }
 
     /**
@@ -43,9 +46,9 @@ public class Extension {
         resourceList.forEach(e -> {
             T o = null;
             try {
-                o = target.newInstance();
-            } catch (InstantiationException | IllegalAccessException ex) {
-                ex.printStackTrace();
+                o = target.getDeclaredConstructor().newInstance();
+            } catch (Exception ex) {
+                log.error("copyBeanList 实例化 {} 失败: {}", target.getName(), ex.getMessage(), ex);
             }
             org.springframework.beans.BeanUtils.copyProperties(e, o);
             targetList.add(o);
@@ -56,25 +59,23 @@ public class Extension {
     /**
      * 获取当前的用户信息 根据token
      */
-    public static String  getTokenInfo(String token,String key)
-    {
-        token=token.replace("Bearer ","");
-        DecodedJWT jwt=JWTUtils.getTokenInfo(token);
-        return   jwt.getClaims().get(key).asString();
+    public static String getTokenInfo(String token, String key) {
+        token = token.replace("Bearer ", "");
+        DecodedJWT jwt = JWTUtils.getTokenInfo(token);
+        return jwt.getClaims().get(key).asString();
     }
 
     /**
      * LocalDateTime戳转换成字符串
      */
-    public static String LocalDateTimeConvertString(LocalDateTime localDateTime, String format){
-        if(localDateTime==null){
+    public static String LocalDateTimeConvertString(LocalDateTime localDateTime, String format) {
+        if (localDateTime == null) {
             return "";
         }
-        if(format==null) {
-            format = format = "yyyy-MM-dd HH:mm:ss";
+        if (format == null) {
+            format = "yyyy-MM-dd HH:mm:ss";
         }
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern(format);
-
         return localDateTime.format(formatter);
     }
 }
